<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:padding="20dp"
    android:layout_height="match_parent"
    tools:context=".view.HomeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tvHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck"
            tools:layout_editor_absoluteX="152dp"
            tools:layout_editor_absoluteY="11dp" />

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_profile"
            tools:ignore="ImageContrastCheck"
            tools:layout_editor_absoluteX="316dp"
            tools:layout_editor_absoluteY="10dp" />


    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popular_movies"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPopularMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upcoming_movies"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUpcomingMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/top_rated_movies"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTopRatedMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popular_tv_series"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPopularTvSeries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/on_the_air_series"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvOnTheAirSeries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>