<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.EditProfileFragment">

    <ImageView
        android:id="@+id/btnHome"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_home"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        />

    <TextView
        android:id="@+id/tv_Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/edit_profile"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />
    <androidx.cardview.widget.CardView
        android:layout_marginTop="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="8dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_Profile"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_marginTop="8dp"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:background="@drawable/circle_bg"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_profile"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/image_profile"
                app:boxBackgroundColor="@color/dark"
                android:textColorHint="#6FFFFFFF"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_login">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etImage_profile"
                    android:layout_width="match_parent"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/username"
                app:boxBackgroundColor="@color/dark"
                android:textColorHint="#6FFFFFFF"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_login">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsername_Profile"
                    android:layout_width="match_parent"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnSaveEdit"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/red"
        android:text="@string/save_edit"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>